name:                primo-endpoint
version:             0
synopsis:            Convert and serve metadata to Fedora-like Solr documents for primo
-- description:         
-- license:             
-- license-file:        LICENSE
author:              Dylan Simon
maintainer:          dylan@dylex.net
copyright:           2017 NYU
-- category:            
build-type:          Simple
extra-source-files:  README.md
tested-with:         GHC == 7.10.3
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/NYULibraries/primo_endpoint

executable primo-import
  main-is:             Main.hs
  hs-source-dirs:      .
  other-modules:
    Util
    Document
    Config
    FDA
    Fields
    Server
  default-language:    Haskell2010
  ghc-options: -Wall
  build-depends:       
    base >=4.8 && <5,
    bytestring,
    text,
    unordered-containers,
    vector,
    aeson,
    network-uri,
    connection,
    http-client >= 0.5,
    http-client-tls,
    http-conduit >= 2.2,
    http-types,
    wai,
    warp,
    yaml
