name:                primo-endpoint
version:             0
synopsis:            Convert and serve metadata to Fedora-like Solr documents for primo
-- description:         
license:             Apache-2.0
license-file:        LICENSE
author:              Dylan Simon
maintainer:          dylan@dylex.net
copyright:           2017 NYU
-- category:            
build-type:          Simple
extra-source-files:  README.md
tested-with:         GHC == 7.10.3
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/NYULibraries/primo_endpoint

executable primo-endpoint
  main-is:             Main.hs
  hs-source-dirs:      .
  other-modules:
    Util
    Auth
    ISO639
    Document
    Fields
    Config
    Cache
    Source.Solr
    Source.Blacklight
    Source.FDA
    Source.DLTS
    Source.DLib
    Source.SDR
    Source.SpecialCollections
    Output.Primo
    Server
    View
  default-language:    Haskell2010
  ghc-options: -Wall
  build-depends:       
    base >=4.8 && <5,
    bytestring,
    directory,
    filepath,
    time,
    transformers,
    case-insensitive,
    text,
    unordered-containers,
    vector,
    aeson >= 1,
    blaze-html,
    connection,
    network-uri,
    http-client >= 0.5,
    http-client-tls,
    http-conduit >= 2.2,
    http-types,
    shakespeare,
    wai,
    wai-extra,
    warp,
    yaml
